@@ -26,6 +26,19 @@
 			<artifactId>mss-arquillian-mediaserver-extension</artifactId>
 			<version>1.0.0-ALPHA2-SNAPSHOT</version>
 		</dependency>
-
 	</dependencies>
+
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>2.12.1</version>
+				<configuration>
+					<argLine>-Xms512m -Xmx1024m -XX:MaxPermSize=1024m</argLine>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
+
 </project>
